# dnn-phylogeny

./: .gitignore  README.md  pyproject.toml
dnn_phylogeny/: identifyParentChildRelationships.py
